# ai_analyst_crew

./: .env  Dockerfile  README.md  READMEֹ_NEW.md  docker-compose.yml  fundamental_analysis.json  pyproject.toml  requirements.txt  sentiment_analysis.json  stock_report.md  streamlit_app.py  technical_forecast.json
src/: requirements.txt
src/ai_analyst_crew/: First 2 Agent.txt  crew.py  fundamental_analysis.json  main.py  sentiment_analysis.json  stock_report.md  technical_forecast.json
src/ai_analyst_crew/config/: agents.yaml  tasks.yaml
src/ai_analyst_crew/data/: Normalized_Data.csv  prepare_technical_targets.py
src/ai_analyst_crew/outputs/: 2 Agents - 11.07.txt  3 Agents - 11.07.txt
src/ai_analyst_crew/tools/: final_recommendation_tool.py  fundamental_tools.py  sentiment_tools.py  technical_tools.py
